--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -27,7 +27,7 @@
           <li class="ml-6"><a href="/register">Registrar</a></li>
           <li class="ml-6"><a href="/login">Entrar</a></li>
           <li class="ml-6">
-            <a href="#" class="inline-block px-4 py-2 rounded-full"
+            <a href="/cart" class="inline-block px-4 py-2 rounded-full"
               ><img src="/img/cart.png" alt=""
             /></a>
           </li>
