--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -44,8 +44,13 @@ section.hero {
 .btn-primary {
   background: $primary;
   transition: $smooth;
+  outline: none;
   &:hover {
     background: $primary-hover;
+    outline: none;
+  }
+  &:focus {
+    outline: none;
   }
 }
 
@@ -182,6 +187,65 @@ section.status {
   margin-top: 8px;
 }
 
+.currencyChange :first-child {
+  color: $primary;
+}
+
+.paymentMethod {
+  position: relative;
+}
+.paymentMethod .pointer {
+  position: absolute;
+  top: 12px;
+}
+.orderContainer {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  width: 400px;
+  max-width: 100%;
+}
+.form-control.success input {
+  border-color: #2ecc71;
+}
+
+.form-control.error input {
+  border-color: #e74c3c;
+}
+.form-control i {
+  visibility: visible;
+  position: absolute;
+  top: 40px;
+  right: 10px;
+}
+
+.form-control {
+  // display: block;
+  position: relative;
+}
+/*.form-control.success i.fa-check-circle {
+  color: #2ecc71;
+  visibility: visible;
+}
+
+.form-control.error i.fa-exclamation-circle {
+  color: #e74c3c;
+  visibility: visible;
+}
+
+.form-control small {
+  color: #e74c3c;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: visible;
+}
+
+.form-control.error small {
+  visibility: visible;
+}*/
+
 @media (max-width: 1060px) {
   .container {
     max-width: 90%;
@@ -197,32 +261,4 @@ section.status {
   .status-box ul li span:before {
     font-size: 34px;
   }
-}
-
-.StripeElement {
-  box-sizing: border-box;
-  width: 50%;
-  margin-left: auto;
-  height: 40px;
-  padding: 10px 12px;
-
-  border: 1px solid transparent;
-  border-radius: 4px;
-  background-color: white;
-
-  box-shadow: 0 1px 3px 0 #e6ebf1;
-  -webkit-transition: box-shadow 150ms ease;
-  transition: box-shadow 150ms ease;
-}
-
-.StripeElement--focus {
-  box-shadow: 0 1px 3px 0 #cfd7df;
-}
-
-.StripeElement--invalid {
-  border-color: #fa755a;
-}
-
-.StripeElement--webkit-autofill {
-  background-color: #fefde5 !important;
 }
