--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -28,109 +28,156 @@
           >R$ <%= session.cart.totalPrice %></span
         >
       </div>
-      <% if(user) { %>
-      <div>
-        <form action="/orders" method="POST" class="mt-12" id="payment-form">
-          <div class="relative w-1/2 ml-auto mb-4">
-            <select
-              id="paymentType"
-              name="paymentType"
-              class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 mb-20 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline"
-            >
-              <option value="currency">Pagar em dinheiro</option>
-              <option value="credit-card">Pagar com cartão</option>
-            </select>
-            <div
-              class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-            >
-              <svg
-                class="fill-current h-4 w-4"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-              >
-                <path
-                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="flex items-center justify-between">
-            <input
-              name="name"
-              class="border border-gray-400 p-2 w-1/2 mb-16 rounded-md"
-              type="text"
-              value="<%= user.name%>"
-            />
 
-            <input
-              id="phone"
-              name="phone"
-              class="border border-gray-400 px-12 py-2 w-1/3 mb-16 rounded-md"
-              type="text"
-              placeholder="Telefone"
-            />
-          </div>
-          <div class="flex items-center justify-between mb-4">
-            <input
-              name="cep"
-              class="border border-gray-400 w-1/4 p-2 px-4 rounded-md"
-              type="text"
-              placeholder="Cep"
-            />
-            <button
-              class="btn-primary ml-20 px-8 py-2 w-1/4 rounded-full text-white font-bold"
-              type="submit"
-            >
-              Buscar Cep
-            </button>
-          </div>
+      <div class="paymentMethod">
+        <select
+          id="paymentMethod"
+          name="paymentMethod"
+          class="block appearance-none ml-auto mr-0 bg-white border border-gray-400 hover:border-gray-500 mb-4 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline"
+        >
+          <option value="currency">Pagar em dinheiro</option>
+          <option value="credit-card">Pagar com cartão</option>
+        </select>
 
-          <input
-            name="street"
-            class="w-full border border-gray-400 p-2 px-4 mb-4 rounded-md"
-            type="text"
-            placeholder="Rua"
-          /><br />
-          <div class="flex items-center justify-between ">
-            <input
-              name="district"
-              class="border border-gray-400 p-2 w-1/2 mb-4 rounded-md"
-              type="text"
-              placeholder="Bairro"
+        <div
+          class="pointer pointer-events-none inset-y-0 right-0 px-2 text-gray-700"
+        >
+          <svg
+            class="fill-current h-4 w-4"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+          >
+            <path
+              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
             />
-            <input
-              name="city"
-              class="border border-gray-400 p-2 w-1/4 mb-4 rounded-md"
-              type="text"
-              placeholder="Cidade"
-            />
-            <input
-              name="state"
-              class="border border-gray-400 p-2 w-1/6 mb-4 rounded-md"
-              type="text"
-              placeholder="Estado"
-            />
-          </div>
-
-          <div class="mt-4">
-            <div id="card-element"></div>
-            <button
-              class="btn-primary ml-20 px-8 py-2 w-1/4 rounded-full text-white font-bold"
-              type="submit"
-            >
-              Peça Agora
-            </button>
-          </div>
-        </form>
+          </svg>
+        </div>
       </div>
-      <% } else { %>
-      <a
-        href="/login"
-        class="inline-block cursor-pointer btn-primary px-6 py-2 rounded-full text-white font-bold mt-6"
-        >Entrar para continuar</a
-      >
-      <% } %>
+      <div id="currencyChange" class="currencyChange flex flex-col">
+        <span class="text-lg color-primary">Precisa de troco? pra quanto?</span>
+        <span class="text-sm mb-4">Se não precisa, só deixar em branco.</span>
+        <input
+          class=" ml-auto mr-0 border border-gray-400 px-12 py-2 w-1/4 mb-4 rounded-md"
+          type="text"
+          placeholder="R$ 0,00"
+        />
+      </div>
     </div>
+    <% if(user) { %>
+    <div class="orderContainer">
+      <form
+        action="/orders"
+        method="POST"
+        class="mt-12"
+        name="orderForm"
+        id="orderForm"
+      >
+        <div class="form-control">
+          <input
+            id="username"
+            name="username"
+            class="border border-gray-400 rounded-md"
+            type="text"
+            value="<%= user.name%>"
+          />
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <input
+            id="phone"
+            value="<%= user.phone%>"
+            name="phone"
+            class="border border-gray-400 rounded-md"
+            type="text"
+            placeholder="Telefone"
+          />
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <input
+            id="zipcode"
+            value="<%= user.address.zipcode%>"
+            name="zipcode"
+            class="border border-gray-400 rounded-md"
+            type="number"
+            placeholder="Cep"
+          />
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+          <small>Error message</small>
+        </div>
+        <button
+          class="btn-primary  rounded-full text-white font-bold"
+          id="searchzipcodebtn"
+          name="searchzipcodebtn"
+          type="button"
+        >
+          Buscar Cep
+        </button>
+        <a href="descobrir-cep">Nao sei meu Cep</a>
+
+        <input
+          id="street"
+          name="street"
+          class="border border-gray-400 rounded-md"
+          type="text"
+          value="<%= user.address.street%>"
+          placeholder="Rua"
+        />
+        <input
+          id="houseNumber"
+          name="houseNumber"
+          class="border border-gray-400  rounded-md"
+          type="number"
+          value="<%= user.address.housenumber%>"
+          placeholder="Num"
+        />
+
+        <input
+          id="district"
+          name="district"
+          value="<%= user.address.district%>"
+          class="border border-gray-400 rounded-md"
+          type="text"
+          placeholder="Bairro"
+        />
+        <input
+          id="city"
+          name="city"
+          value="<%= user.address.city%>"
+          class="border border-gray-400 rounded-md"
+          type="text"
+          placeholder="Cidade"
+        />
+        <input
+          id="state"
+          name="state"
+          value="<%= user.address.state%>"
+          class="border border-gray-400 rounded-md"
+          type="text"
+          placeholder="Estado"
+        />
+        <div id="order-btn" class="mt-4"></div>
+        <button
+          id="ordernowbtn"
+          class="btn-primary rounded-full text-white font-bold"
+          type="submit"
+        >
+          Peça Agora
+        </button>
+      </form>
+    </div>
+    <% } else { %>
+    <a
+      href="/login"
+      class="inline-block cursor-pointer btn-primary px-6 py-2 rounded-full text-white font-bold mt-6"
+      >Entrar para continuar</a
+    >
+    <% } %>
   </div>
   <% } else { %>
   <div class="empty-cart py-16">
@@ -151,3 +198,6 @@
   </div>
   <% } %>
 </section>
+<script src="../js/searchzipcode.js"></script>
+<script src="../js/hideElements.js"></script>
+<script src="../js/validate.js"></script>
