--- a/resources/views/customers/orders.ejs
+++ b/resources/views/customers/orders.ejs
@@ -38,7 +38,7 @@
             >
           </td>
           <td class="border px-4 py-2"><%= order.phone%></td>
-          <td class="border px-4 py-2"><%= order.address%></td>
+          <td class="border px-4 py-2"><%= order.address.street +", "+order.address.houseNumber +", "+order.address.district+", "+order.address.city%></td> %></td>
           <td class="border px-4 py-2">
             <%= moment(order.createdAt).format('DD/MM/YYYY - HH:mm')%>
           </td>
