--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -22,14 +22,40 @@
     </div>
     <hr />
     <div class="text-right py-4">
-      <div>
-        <span class="text-lg font-bold">Total do pedido:</span>
-        <span class="amount text-2xl font-bold ml-2"
-          >R$ <%= session.cart.totalPrice %></span
-        >
+      <div class="grid justify-between grid-cols-2 align-center m-0">
+        <span class="ml-0 mr-auto text-lg font-bold">Tipo de abertura:</span>
+        <div>
+          <span class="text-lg font-bold">Total do pedido:</span>
+          <span class="amount text-2xl font-bold ml-2"
+            >R$ <%= session.cart.totalPrice %></span
+          >
+        </div>
       </div>
 
       <div class="paymentMethod">
+        <select
+          id="entryPoint"
+          name="entryPoint"
+          class="block appearance-none ml-0 mr-auto bg-white border border-gray-400 hover:border-gray-500 mb-4 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline"
+        >
+          <option value="whatsapp">WhatsApp</option>
+          <option value="phone">Telefone</option>
+          <option value="table">Mesa / Balcão</option>
+          <option value="site">Site</option>
+        </select>
+        <div
+          class="pointer-entry pointer-events-none inset-y-0 left-12 px-2 text-gray-700"
+        >
+          <svg
+            class="fill-current h-4 w-4"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+          >
+            <path
+              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+            />
+          </svg>
+        </div>
         <select
           id="paymentMethod"
           name="paymentMethod"
@@ -40,7 +66,7 @@
         </select>
 
         <div
-          class="pointer pointer-events-none inset-y-0 right-0 px-2 text-gray-700"
+          class="pointer-payment pointer-events-none inset-y-0 right-0 px-2 text-gray-700"
         >
           <svg
             class="fill-current h-4 w-4"
@@ -57,118 +83,199 @@
         <span class="text-lg color-primary">Precisa de troco? pra quanto?</span>
         <span class="text-sm mb-4">Se não precisa, só deixar em branco.</span>
         <input
-          class=" ml-auto mr-0 border border-gray-400 px-12 py-2 w-1/4 mb-4 rounded-md"
+          class=" ml-auto mr-0 border border-gray-400 px-12 py-2 w-1/4 rounded-md"
           type="text"
           placeholder="R$ 0,00"
         />
       </div>
     </div>
     <% if(user) { %>
-    <div class="orderContainer">
+    <div>
       <form
         action="/orders"
         method="POST"
-        class="mt-12"
+        class=""
         name="orderForm"
         id="orderForm"
       >
-        <div class="form-control">
-          <input
-            id="username"
-            name="username"
-            class="border border-gray-400 rounded-md"
-            type="text"
-            value="<%= user.name%>"
-          />
-          <i class="fas fa-check-circle"></i>
-          <i class="fas fa-exclamation-circle"></i>
-          <small>Error message</small>
-        </div>
-        <div class="form-control">
-          <input
-            id="phone"
-            value="<%= user.phone%>"
-            name="phone"
-            class="border border-gray-400 rounded-md"
-            type="text"
-            placeholder="Telefone"
-          />
-          <i class="fas fa-check-circle"></i>
-          <i class="fas fa-exclamation-circle"></i>
-          <small>Error message</small>
-        </div>
-        <div class="form-control">
-          <input
-            id="zipcode"
-            value="<%= user.address.zipcode%>"
-            name="zipcode"
-            class="border border-gray-400 rounded-md"
-            type="number"
-            placeholder="Cep"
-          />
-          <i class="fas fa-check-circle"></i>
-          <i class="fas fa-exclamation-circle"></i>
-          <small>Error message</small>
-        </div>
         <button
-          class="btn-primary  rounded-full text-white font-bold"
-          id="searchzipcodebtn"
-          name="searchzipcodebtn"
+          class="btn-primary modal-open rounded-full mb-4 text-white font-bold"
+          id="searchclientbtn"
+          name="searchclientbtn"
           type="button"
         >
-          Buscar Cep
+          Buscar Cliente
         </button>
-        <a href="descobrir-cep">Nao sei meu Cep</a>
 
-        <input
-          id="street"
-          name="street"
-          class="border border-gray-400 rounded-md"
-          type="text"
-          value="<%= user.address.street%>"
-          placeholder="Rua"
-        />
-        <input
-          id="houseNumber"
-          name="houseNumber"
-          class="border border-gray-400  rounded-md"
-          type="number"
-          value="<%= user.address.housenumber%>"
-          placeholder="Num"
-        />
+        <div class="firstline">
+          <div class="form-control">
+            <label for="username">Nome:</label>
+            <input
+              id="username"
+              name="username"
+              class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
+              type="text"
+              value="<%= user.name%>"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+          <div class="form-control">
+            <label for="phone">Telefone:</label>
+            <input
+              id="phone"
+              value="<%= user.phone%>"
+              name="phone"
+              class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+              type="number"
+              placeholder="Telefone"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+        </div>
+        <div class="secondline">
+          <div class="form-control">
+            <label for="zipcode">Cep:</label>
+            <input
+              id="zipcode"
+              value="<%= user.address.zipcode%>"
+              name="zipcode"
+              class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+              type="number"
+              placeholder="Cep"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
 
-        <input
-          id="district"
-          name="district"
-          value="<%= user.address.district%>"
-          class="border border-gray-400 rounded-md"
-          type="text"
-          placeholder="Bairro"
-        />
-        <input
-          id="city"
-          name="city"
-          value="<%= user.address.city%>"
-          class="border border-gray-400 rounded-md"
-          type="text"
-          placeholder="Cidade"
-        />
-        <input
-          id="state"
-          name="state"
-          value="<%= user.address.state%>"
-          class="border border-gray-400 rounded-md"
-          type="text"
-          placeholder="Estado"
-        />
-        <div id="order-btn" class="mt-4"></div>
-        <button
-          id="ordernowbtn"
-          class="btn-primary rounded-full text-white font-bold"
-          type="submit"
-        >
-          Peça Agora
-        </button>
+          <button
+            class="btn-primary rounded-full text-white font-bold"
+            id="searchzipcodebtn"
+            name="searchzipcodebtn"
+            type="button"
+          >
+            Buscar Cep
+          </button>
+          <a href="descobrir-cep">Nao sei meu Cep</a>
+        </div>
+        <div class="thirdline">
+          <div class="form-control">
+            <label for="street">Rua:</label>
+            <input
+              id="street"
+              name="street"
+              class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
+              type="text"
+              value="<%= user.address.street%>"
+              placeholder="Rua"
+            />
+
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+          <div class="form-control">
+            <label for="houseNumber">Número:</label>
+            <input
+              id="houseNumber"
+              name="houseNumber"
+              class="border pl-6 px-4 py-2 border-gray-400  rounded-md"
+              type="number"
+              value="<%= user.address.housenumber%>"
+              placeholder="Num"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+        </div>
+        <div class="fourthline">
+          <div class="form-control">
+            <label for="district">Bairro:</label>
+            <input
+              id="district"
+              name="district"
+              value="<%= user.address.district%>"
+              class="border pl-6  px-4 py-2 border-gray-400 rounded-md"
+              type="text"
+              placeholder="Bairro"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+          <div class="form-control">
+            <label for="city">Cidade:</label>
+            <input
+              id="city"
+              name="city"
+              value="<%= user.address.city%>"
+              class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+              type="text"
+              placeholder="Cidade"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+          <div class="form-control">
+            <label for="state">Estado:</label>
+            <input
+              id="state"
+              name="state"
+              value="<%= user.address.state%>"
+              class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+              type="text"
+              placeholder="Estado"
+            />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small></small>
+          </div>
+        </div>
+        <div class="form-control">
+          <label for="reference">Ponto de referência:</label>
+          <input
+            id="reference"
+            name="reference"
+            value="<%= user.address.reference%>"
+            class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+            type="text"
+            placeholder="Ponto de referencia"
+          />
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+          <small></small>
+        </div>
+        <div class="form-control">
+          <input
+            id="entryPointValue"
+            name="entryPointValue"
+            value=""
+            type="hidden"
+          />
+        </div>
+        <div class="form-control">
+          <input
+            type="hidden"
+            name="paymentMethodValue"
+            id="paymentMethodValue"
+            value=""
+          />
+        </div>
+        <div id="order-btn" class="mt-4">
+          <button
+            id="ordernowbtn"
+            class="btn-primary rounded-full text-white font-bold"
+            type="submit"
+          >
+            Peça Agora
+          </button>
+        </div>
       </form>
     </div>
     <% } else { %>
@@ -198,6 +305,98 @@
   </div>
   <% } %>
 </section>
+<div
+  class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center"
+>
+  <div
+    class="modal-overlay absolute w-full h-full bg-gray-900 opacity-50"
+  ></div>
+
+  <div
+    class="modal-container bg-white m-0  rounded shadow-lg z-50 overflow-y-auto"
+  >
+    <!-- Add margin if you want to see some of the overlay behind the modal-->
+    <div class="modal-content py-4 text-left px-6">
+      <!--Title-->
+
+      <!--Body-->
+      <div class="modalinputs">
+        <div class="inputModal">
+          <span>Telefone:</span>
+          <input
+            class=" border pl-6 px-4 py-2 mt-2 mb-4 border-gray-400 rounded-md"
+            type="text"
+            name="searchuserphone"
+            id="searchuserphone"
+            placeholder="Telefone"
+          />
+          <span>Nome:</span>
+
+          <input
+            class=" border pl-6 px-4 py-2 mt-2 mb-4 border-gray-400 rounded-md"
+            type="text"
+            name="searchusername"
+            id="searchusername"
+            placeholder="Nome do Cliente"
+          />
+
+          <button
+            class="btn-primary rounded-full text-white font-bold"
+            id="searchUserBtn"
+            name="searchUserBtn"
+            type="button"
+          >
+            Buscar Cliente
+          </button>
+        </div>
+        <form action="/" method="POST">
+          <div>
+            <table class="table">
+              <thead class="thead-dark">
+                <th>
+                  Nome
+                </th>
+                <th>
+                  Telefone
+                </th>
+                <th>
+                  Endereço
+                </th>
+              </thead>
+              <tbody>
+                <td>
+                  Nome
+                </td>
+                <td>
+                  Telefone
+                </td>
+                <td>
+                  Endereço
+                </td>
+              </tbody>
+            </table>
+          </div>
+        </form>
+      </div>
+
+      <!--Footer-->
+      <div class="flex justify-end pt-2">
+        <button
+          class="px-4 bg-transparent p-3 rounded-lg text-indigo-500 hover:bg-gray-100 hover:text-indigo-400 mr-2"
+        >
+          Action
+        </button>
+        <button
+          class="modal-close px-4 bg-indigo-500 p-3 rounded-lg text-white hover:bg-indigo-400"
+        >
+          Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="../js/searchzipcode.js"></script>
+<script src="../js/searchUserName.js"></script>
 <script src="../js/hideElements.js"></script>
 <script src="../js/validate.js"></script>
