--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -5,6 +5,7 @@
       <h1 class="text-6xl mb-4 font-bold">Tá esperando o quê?</h1>
       <button
         class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary"
+        onclick=""
       >
         Peça Agora
       </button>
@@ -14,7 +15,7 @@
     </div>
   </div>
 </section>
-<section class="menu container mx-auto py-8">
+<section id="container" class="menu container mx-auto py-8">
   <h1 class="text-xl font-bold mb-8">Todos os Itens</h1>
   <div class="grid grid-cols-4 gap-x-12 gap-y-16">
     <% pizzas.forEach(function (pizza){ %>
