--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top Pizza</title>
+    <title>GreenFood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="container mx-auto flex items-center justify-between py-4">
-      <div>
-        <img src="/img/logo.png" alt="logo" />
-      </div>
-      <div>
-        <ul class="flex items-center">
-          <li class="ml-6"><a href="#">Menu</a></li>
-          <li class="ml-6"><a href="#">Ofertas</a></li>
-          <li class="ml-6"><a href="/register">Registrar</a></li>
-          <li class="ml-6"><a href="/login">Entrar</a></li>
-          <li class="ml-6">
-            <a href="/cart" class="inline-block px-4 py-2 rounded-full"
-              ><img src="/img/cart.png" alt=""
-            /></a>
-          </li>
-        </ul>
-      </div>
+        <div>
+            <img src="/img/logo.png" alt="logo" />
+        </div>
+        <div>
+            <ul class="flex items-center">
+                <li class="ml-6"><a href="#">Menu</a></li>
+                <li class="ml-6"><a href="#">Ofertas</a></li>
+                <li class="ml-6"><a href="/register">Registrar</a></li>
+                <li class="ml-6"><a href="/login">Entrar</a></li>
+                <li class="ml-6">
+                    <a href="/cart" class="inline-block px-4 py-2 rounded-full"><img src="/img/cart.png" alt="" /></a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <%- body %>
-    <footer></footer>
+        <footer></footer>
 
-    <script src="/js/app.js"></script>
-  </body>
+        <script src="/js/app.js"></script>
+</body>
+
 </html>
